--- a/FoodOrderingApp-api/pom.xml
+++ b/FoodOrderingApp-api/pom.xml
@@ -38,7 +38,7 @@
         </dependency>
 
         <dependency>
-            <groupId>FoodOrderingApp-Backend</groupId>
+            <groupId>FoodOrderingApp</groupId>
             <artifactId>FoodOrderingApp-service</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
